Scriptorium now uses magic ink